<resources>
    <string name="app_name">Image Diary</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>
    <string name="selectImageAlertDialog">Select Action</string>
    <string name="selectPhotoFromLibrary">Select photo from gallery</string>
    <string name="CapturePhotoFromCamera">Capture photo from camera</string>
    <string name="failed">Failed!</string>
    <string name="goToSettingsMessage">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings</string>
    <string name="goToSettings">GO TO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="pleaseEnterTitle">Please enter title</string>
    <string name="pleaseEnterDescription">Please enter description</string>
    <string name="pleaseEnterDate">Please enter date</string>
    <string name="pleaseSelectLocation">Please select location</string>
    <string name="pleaseAddImage">Please add image</string>
    <string name="noPlacesAddedYet">No places added yet</string>
    <string name="imageOfPlace">Image of place</string>

    <string name="description">Description</string>
    <string name="location">Location</string>

    <string name="changeImage">CHANGE IMAGE</string>
    <string name="saveChanges">SAVE CHANGES</string>
    <string name="add_place">Add Place</string>

    <string name="start">Start</string>
    <string name="stop">stop</string>
    <string name="countdown_timer">Countdown Timer</string>
    <string name="enter_time_in_seconds">Enter time in seconds</string>
    <string name="stopwatch_start_alert">Stopwatch started</string>
    <string name="image_of_place">Image of place</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
