<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="place"
            type="com.pouyaa.imagediary.model.PlaceModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AddPlacesFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/addPlaceMainPadding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addTitleTextInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addTitleEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_title"
                        android:inputType="textCapWords"
                        android:text="@{place.title}"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addDescriptionTextInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_screen_til_marginTop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addTitleTextInputLayout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addDescriptionEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_description"
                        android:inputType="textCapSentences"
                        android:text="@{place.description}"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addDateTextInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_screen_til_marginTop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addDescriptionTextInputLayout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/edit_text_hint_date"
                        android:inputType="text"
                        android:text="@{place.date}"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/addLocationTextInputLayout"
                    style="@style/Widget.Design.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_screen_til_marginTop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addDateTextInputLayout">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/addLocationEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_location"
                        android:inputType="text"
                        android:text="@{place.location}"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageOfPlaceImageView"
                    android:layout_width="@dimen/add_screen_place_image_size"
                    android:layout_height="@dimen/add_screen_place_image_size"
                    android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                    android:background="@drawable/ic_image_gray_200dp"
                    android:padding="@dimen/add_screen_place_image_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_image_gray_200dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/addLocationTextInputLayout" />

                <TextView
                    android:id="@+id/addImageTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/add_screen_text_add_image_padding"
                    android:text="@string/text_add_image"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/add_screen_text_add_image_textSize"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/saveButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageOfPlaceImageView"
                    app:layout_constraintTop_toBottomOf="@id/addLocationTextInputLayout" />


                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:gravity="center"
                    android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                    android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                    android:text="@string/btn_text_save"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/btn_text_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imageOfPlaceImageView" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
